FIXED - Alignment issue in the new transparent background and Subject dropdown

--- a/src/components/common/TextField.css
+++ b/src/components/common/TextField.css
@@ -12,6 +12,9 @@
 }
 #scroll {
   height: 57vh;
-  background-color: #e2dede;
+  background-color: transparent;
   overflow: scroll;
+}
+.input-focus {
+  height: 1px;
 }
